# par

./: CMakeLists.txt  README.md
bench/: CMakeLists.txt  b-mandelbrot.cpp  b-rejection-sample.cpp  b-sleep.cpp  bu-init.hpp
code/: CMakeLists.txt
code/mylib/: api.h
code/par/: debug_stats.hpp  debug_stats_print.hpp  job_info.hpp  pchunk.hpp  pfor.hpp  prun.hpp  run_opts.hpp  task_func.hpp  task_func_ptr.hpp  thread_pool.cpp  thread_pool.hpp
code/par/bits/: anchor.hpp  cpu.hpp  imath.hpp  te_func_ptr.hpp  thread_name.cpp  thread_name.hpp
doc/: perf.md
example/: CMakeLists.txt  e-mat-mul.cpp
sandbox/: CMakeLists.txt  sandbox.cpp
test/: CMakeLists.txt  t-anchor.cpp  t-integration.cpp  t-pchunk.cpp  t-pfor.cpp  t-task_func.cpp  t-task_func_ptr.cpp  t-te_func_ptr.cpp  t-thread_pool.cpp
